packages/yew-macro/tests/html_macro/component-unimplemented-fail.stderr
error[E0599]: no function or associated item named `new` found for struct `yew::virtual_dom::vcomp::VChild<Unimplemented>` in the current scope
 --> $DIR/component-unimplemented-fail.rs:6:14
  |
3 | struct Unimplemented;
  | --------------------- doesn't satisfy `Unimplemented: yew::html::component::Component`
...
6 |     html! { <Unimplemented /> };
  |              ^^^^^^^^^^^^^ function or associated item not found in `yew::virtual_dom::vcomp::VChild<Unimplemented>`
  |
  = note: the method `new` exists but the following trait bounds were not satisfied:
          `Unimplemented: yew::html::component::Component`

error[E0277]: the trait bound `Unimplemented: yew::html::component::Component` is not satisfied
 --> $DIR/component-unimplemented-fail.rs:6:14
  |
6 |     html! { <Unimplemented /> };
  |              ^^^^^^^^^^^^^ the trait `yew::html::component::Component` is not implemented for `Unimplemented`
